# src/main/java/hei/student/schoolm/model/GroupFlowType.java
@@ -1,0 +1,6 @@
+package hei.student.schoolm.model;
+
+public enum GroupFlowType {
+  JOIN,
+  LEAVE
+}
